changes as per recommendations